--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4;
+            line-height: 1.5;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar completely */
+            overflow: hidden; /* Disables scroll bar for one-page fit */
         }
 
         .container {
             max-width: 850px;
-            margin: 2vh auto; /* Responsive margin to fit all screens */
+            margin: 5vh auto; /* Responsive margin to stretch content to screen edges */
             padding: 0 20px;
+            height: 90vh; /* Constrains container to viewport height */
+            display: flex;
+            flex-direction: column;
         }
 
         /* Header Section */
@@ -30,12 +33,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 12px; /* Tightened gap */
+            margin-bottom: 3vh;
         }
 
         .bio-text {
             flex: 1;
-            padding-right: 35px;
+            padding-right: 40px;
         }
 
         /* Name Header: Lato 24pt, Unbolded */
@@ -43,7 +46,7 @@
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 8px 0;
+            margin: 0 0 10px 0;
             color: #000;
         }
 
@@ -51,7 +54,7 @@
         a {
             color: #1a73e8; 
             text-decoration: none; 
-            transition: color 0.15s ease-in-out;
+            transition: color 0.2s ease-in-out;
         }
 
         a:hover {
@@ -60,13 +63,13 @@
         }
 
         .social-links {
-            margin-top: 8px;
+            margin-top: 10px;
         }
 
-        /* Profile Picture: Rahul's sizing (180px) */
+        /* Profile Picture: Rahul's sizing (~180px) */
         .profile-img {
-            width: 175px; /* Slightly adjusted to save vertical room */
-            height: 175px;
+            width: 180px;
+            height: 180px;
             border-radius: 50%;
             object-fit: cover;
             display: block;
@@ -74,32 +77,44 @@
             flex-shrink: 0;
         }
 
-        /* Technical Projects Header: Lato 16.5pt, Unbolded, moved higher */
+        /* Technical Projects Header: Lato 16.5pt, Unbolded */
         h2 {
             font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 15px; /* Pulls header higher up */
-            margin-bottom: 12px;
+            margin-top: 4vh; 
+            margin-bottom: 2.5vh;
             border-bottom: 1px solid #eee;
-            padding-bottom: 5px;
+            padding-bottom: 8px;
             font-weight: 400;
             color: #000;
         }
 
+        .project-list {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* Spaces projects to fill the bottom */
+        }
+
         .project-entry {
             display: flex;
-            margin-bottom: 15px; /* Tightened entry spacing to prevent scroll */
+            margin-bottom: 3.5vh;
             align-items: flex-start;
         }
 
-        /* Neat, Larger Project Thumbnails (No black bars) */
+        .project-entry:last-child {
+            margin-bottom: 0;
+        }
+
+        /* Neat Project Thumbnails (Reduced black bars) */
         .project-img, .placeholder-box {
-            width: 270px; /* Wider for more detail */
-            height: 145px; 
-            margin-right: 30px;
+            width: 260px; 
+            height: 140px; 
+            margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
-            object-fit: cover; /* Fills container neatly */
+            object-fit: contain; /* Keeps headers visible */
+            background-color: #000; /* Blends with the black chart */
             border: 1px solid #eee;
         }
 
@@ -108,49 +123,50 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 9px;
+            font-size: 10px;
             color: #aaa;
         }
 
         .project-info h3 {
             margin: 0;
-            font-size: 1.1em;
+            font-size: 1.15em;
             font-weight: 700;
             color: #000; 
             cursor: default;
         }
 
         .project-info p {
-            margin: 1px 0;
+            margin: 2px 0;
         }
 
         .project-category {
             color: #d93025; 
             font-style: italic;
             font-weight: 700;
-            font-size: 0.9em;
+            font-size: 0.95em;
         }
 
         .project-links {
-            font-size: 0.9em;
-            margin: 3px 0 !important;
+            font-size: 0.95em;
+            margin: 5px 0 !important;
         }
 
         /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
-            margin-top: 4px !important;
+            margin-top: 5px !important;
             color: #444;
             font-family: 'Lato', sans-serif;
             font-weight: 400; 
             font-size: 10.5pt; 
-            max-width: 530px;
-            line-height: 1.4;
+            max-width: 550px;
+            line-height: 1.5;
         }
 
         @media (max-width: 750px) {
             body { overflow: auto; }
+            .container { height: auto; margin: 20px auto; }
             header, .project-entry { flex-direction: column; }
-            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 10px; }
+            .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
         }
     </style>
 </head>
@@ -171,14 +187,14 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture -->
+            <!-- Clickable Profile Picture matching Rahul's sizing -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
         </header>
 
         <!-- Technical Projects -->
-        <section>
+        <section class="project-list">
             <h2>Technical Projects</h2>
 
             <!-- Project 1 -->
@@ -192,7 +208,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds and reconstruct fragmented headlines into formal tactical SITREPs.
+                        A real-time dashboard for monitoring global conflict signals. Utilizes a custom NLP pipeline to scrub high-velocity news feeds into formal tactical SITREPs.
                     </p>
                 </div>
             </div>
@@ -208,7 +224,7 @@
                         <a href="#">project page</a> / <a href="#">code</a>
                     </div>
                     <p class="project-description">
-                        An automated auditing engine designed to detect financial fraud and waste in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
+                        An automated auditing engine designed to detect financial fraud in public records. Applies Benford's Law and machine learning outlier detection to flag suspicious payments.
                     </p>
                 </div>
             </div>
