--- a/index.html
+++ b/index.html
@@ -16,32 +16,33 @@
             line-height: 1.45;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar to maintain one-page fit */
+            overflow: hidden; /* Disables scroll bar */
         }
 
         .container {
             max-width: 850px;
-            margin: 3vh auto; /* Slightly reduced top/bottom margin */
+            margin: 3vh auto; 
             padding: 0 20px;
-            height: 94vh; /* Adjusted to give more vertical room for content */
+            height: 94vh; 
             display: flex;
             flex-direction: column;
         }
 
-        /* Header Section */
+        /* Header Section - Updated for center-aligned text block */
         header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 2vh; /* Reduced gap */
+            margin-bottom: 2vh;
         }
 
         .bio-text {
             flex: 1;
             padding-right: 40px;
+            text-align: center; /* Center-aligns name, bio, and links like Rahul's */
         }
 
-        /* Name Header: Lato 24pt, Unbolded */
+        /* Name Header: Lato 24pt, Unbolded, Centered */
         .bio-text h1 {
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
@@ -63,7 +64,7 @@
         }
 
         .social-links {
-            margin-top: 8px;
+            margin-top: 10px;
         }
 
         /* Profile Picture sized to match Rahul's (~180px) */
@@ -81,24 +82,25 @@
         h2 {
             font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
-            margin-top: 2.5vh; /* Reduced to pull content up */
+            margin-top: 2.5vh;
             margin-bottom: 2vh;
             border-bottom: 1px solid #eee;
             padding-bottom: 6px;
             font-weight: 400;
             color: #000;
+            text-align: left; /* Keep project headers left-aligned */
         }
 
         .project-list {
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; /* Keeps projects aligned properly */
+            justify-content: flex-start;
         }
 
         .project-entry {
             display: flex;
-            margin-bottom: 2.8vh; /* Slightly reduced to prevent bottom cut-off */
+            margin-bottom: 2.8vh;
             align-items: flex-start;
         }
 
@@ -106,15 +108,14 @@
             margin-bottom: 0;
         }
 
-        /* Neat Project Thumbnails (Reduced black bars) */
+        /* Project Thumbnails - Updated 'cover' for neatness */
         .project-img, .placeholder-box {
             width: 260px; 
             height: 140px; 
             margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
-            object-fit: contain; /* Prevents internal chart text from being cut off */
-            background-color: #000; /* Blends with the Sentinel background */
+            object-fit: cover; 
             border: 1px solid #eee;
         }
 
@@ -166,6 +167,7 @@
             body { overflow: auto; }
             .container { height: auto; margin: 20px auto; }
             header, .project-entry { flex-direction: column; }
+            .bio-text { padding-right: 0; }
             .project-img, .placeholder-box { width: 100%; height: auto; margin-bottom: 15px; }
         }
     </style>
@@ -177,7 +179,6 @@
         <header>
             <div class="bio-text">
                 <h1>Kenneth Thakur</h1>
-                <!-- Exactly 36 words with University link -->
                 <p>
                     I am a BSc Student in Information Technology Management at <a href="https://www.auckland.ac.nz/en.html" target="_blank">University of Auckland</a>. Invited to the Science Scholars (Top 5%) for academic excellence. My interests lie in Computational Intelligence, Forensic Data Analysis, and Critical Infrastructure Security.
                 </p>
