--- a/index.html
+++ b/index.html
@@ -13,49 +13,51 @@
             font-size: 10.5pt; 
             color: #333;
             background-color: #fff;
-            line-height: 1.4;
+            line-height: 1.5; /* Increased for better readability */
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Disables scroll bar for perfect one-page fit */
+            overflow: hidden; /* Maintains one-page fit */
         }
 
         .container {
             max-width: 880px;
-            margin: 2vh auto; /* Responsive margin to fit screen height */
+            margin: 2vh auto; 
             padding: 0 20px;
-            height: 96vh; /* Occupies the viewport height */
+            height: 96vh; 
             display: flex;
             flex-direction: column;
         }
 
-        /* Header Section - Left Aligned to match Rahul's layout */
+        /* Header Section - Spaced out more */
         header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 1vh;
+            margin-bottom: 3vh; /* Increased gap before projects */
         }
 
         .bio-text {
             flex: 1;
-            padding-right: 40px;
-            text-align: left; /* Swapped back to left-aligned */
+            padding-right: 50px; /* More space between text and image */
+            text-align: left;
         }
 
-        /* Name Header: Lato 24pt, Unbolded */
+        /* Name Header: Lato 24pt, Unbolded, More space below */
         .bio-text h1 {
             font-family: 'Lato', sans-serif;
             font-size: 24pt;
             font-weight: 400; 
-            margin: 0 0 6px 0;
+            margin: 0 0 15px 0; /* Increased from 6px */
             color: #000;
         }
 
+        /* Bio Paragraph: Added line height for "air" */
         .bio-text p {
             margin: 0;
+            line-height: 1.6;
         }
 
-        /* Hyperlink Styles: turns orange on hover, no underline */
+        /* Hyperlink Styles */
         a {
             color: #1a73e8; 
             text-decoration: none; 
@@ -67,11 +69,12 @@
             text-decoration: none;
         }
 
+        /* Social Links: More space above */
         .social-links {
-            margin-top: 6px;
+            margin-top: 15px; /* Increased from 6px */
         }
 
-        /* Profile Picture sized to match Rahul's (180px) */
+        /* Profile Picture */
         .profile-img {
             width: 180px;
             height: 180px;
@@ -82,14 +85,14 @@
             flex-shrink: 0;
         }
 
-        /* Technical Projects Header: Lato 16.5pt, Unbolded */
+        /* Technical Projects Header */
         h2 {
             font-family: 'Lato', sans-serif;
             font-size: 16.5pt;
             margin-top: 1vh; 
-            margin-bottom: 1.5vh;
+            margin-bottom: 2vh;
             border-bottom: 1px solid #eee;
-            padding-bottom: 5px;
+            padding-bottom: 8px;
             font-weight: 400;
             color: #000;
         }
@@ -98,24 +101,24 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between; /* Spacing projects out to fill the page height */
+            justify-content: space-between;
         }
 
         .project-entry {
             display: flex;
+            margin-bottom: 2vh;
             align-items: flex-start;
-            margin-bottom: 1.5vh;
         }
 
         .project-entry:last-child {
             margin-bottom: 0;
         }
 
-        /* Neat, Larger Project Thumbnails - Cover/Top crops black bars while showing title */
+        /* Project Thumbnails */
         .project-img, .placeholder-box {
             width: 300px; 
             height: 170px; 
-            margin-right: 30px;
+            margin-right: 35px;
             border-radius: 2px;
             flex-shrink: 0;
             object-fit: cover; 
@@ -137,7 +140,6 @@
             font-size: 1.15em;
             font-weight: 700;
             color: #000; 
-            cursor: default;
         }
 
         .project-info p {
@@ -156,7 +158,6 @@
             margin: 4px 0 !important;
         }
 
-        /* Project Description: Lato 10.5pt, Unbolded */
         .project-description {
             margin-top: 5px !important;
             color: #444;
@@ -192,7 +193,7 @@
                     <a href="https://github.com/Kenneth-Thakur" target="_blank">GitHub</a>
                 </div>
             </div>
-            <!-- Clickable Profile Picture matching Rahul's sizing -->
+            <!-- Clickable Profile Picture -->
             <a href="linkedin_headshot.jpg" target="_blank">
                 <img src="linkedin_headshot.jpg" alt="Kenneth Thakur" class="profile-img">
             </a>
